fix(ux-chip): add nowrap in chip content

--- a/packages/chip-input/src/ux-chip.css
+++ b/packages/chip-input/src/ux-chip.css
@@ -17,6 +17,7 @@
 
 .ux-chip__content {
   margin: 0 12px;
+  white-space: nowrap;
 }
 
 .ux-chip__thumbnail {
